--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -158,7 +158,7 @@ We detect highly excited transitions of NaCl and KCl, many with Einstein A coeff
 in the range $\sim0.01-0.1$ s$^{-1}$.  These high excitation lines are unlikely
 to be excited by collisions, since the gas would have to be hot enough to excite
 molecules into states with $E_U > 2000$ K and would therefore likely be hot enough
-to dissociate the molecules [would be nice to back this up with numbers].  Alternately,
+to dissociate the molecules {\color{red} It would be nice to back this up with numbers}.  Alternately,
 at high densities and more moderate temperatures, the salts would likely be absorbed
 into dust grains.
 
