figure and text updates

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -19,7 +19,7 @@
 
 \section{Introduction}
 Molecules consisting of alkali metals and halogens have been detected
-toward evolved stars including IRC +10216 \citep{Cernicharo1987a}, 
+toward evolved stars including IRC +10216 \citep{Cernicharo1987a},
 {\color{red}Discussion of AGB*s is now in the discussion session.}
 
 The lines of NaCl and KCl have been catalogued by \citet{Caris2004a}
@@ -189,13 +189,21 @@ excitation states, from which they cascade through rovibrational transitions
 down to the v=0 state, providing a relatively uniform level population
 from $E_U=0$ to $E_U\approx T_*$ instead of a thermal level population.
 
+
+Since the highest clearly detected energy state detected has $E_U\sim2500$ K
+(see Table \ref{tab:all_detections_B3}) {\color{red} there are plots with EU=3500K,
+what gives?}, the radiation field likely turns over at around this temperature,
+implying the presence of a cooler radiation field than implied in \citet{Testi2010a}.
+The lower temperatures could either be because the central source is intrinsically
+cooler or could be produced by extinction between the source and the disk.
+
 % We plot and fit rotational diagrams to measure the abundance and temperature of
 % these molecules.  However, the results are ambiguous: for each vibrational
 % state with more than one detected transition, we are able to fit an excitation
 % temperature, but the abundances of the vibrationally excited states are much
 % higher than the ground state.  This distribution implies that the lines are
 % radiatively excited.
-% 
+%
 % The excitation temperatures derived from the rotational diagram fits are in the
 % range 50-100 K.  The
 % radiation temperature within 50 AU of a $10^4$ \lsun star should be $T_R>500$ K,
