fixed text to go with table

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -190,12 +190,12 @@ down to the v=0 state, providing a relatively uniform level population
 from $E_U=0$ to $E_U\approx T_*$ instead of a thermal level population.
 
 
-Since the highest clearly detected energy state detected has $E_U\sim2500$ K
-(see Table \ref{tab:all_detections_B3}) {\color{red} there are plots with EU=3500K,
-what gives?}, the radiation field likely turns over at around this temperature,
-implying the presence of a cooler radiation field than implied in \citet{Testi2010a}.
-The lower temperatures could either be because the central source is intrinsically
-cooler or could be produced by extinction between the source and the disk.
+Since the highest clearly detected energy state detected has $E_U\sim3000$ K
+(see Table \ref{tab:all_detections_B3}; the v=6 lines of NaCl have three
+J-transitions detected), the radiation field likely turns over at around this
+temperature, implying the presence of a slightly cooler radiation field than
+implied in \citet{Testi2010a}, but still much warmer than the equilibrium temperature
+of the disk at this radius.  
 
 % We plot and fit rotational diagrams to measure the abundance and temperature of
 % these molecules.  However, the results are ambiguous: for each vibrational
