implemented Brett's table suggestion

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -196,6 +196,8 @@ J-transitions detected), the radiation field likely turns over at around this
 temperature, implying the presence of a slightly cooler radiation field than
 implied in \citet{Testi2010a}, but still much warmer than the equilibrium temperature
 of the disk at this radius.  
+However, it is also possible that the higher-excitation lines are simply too faint
+to be detected at our $\sim0.4$ mJy/\kms RMS limit.
 
 % We plot and fit rotational diagrams to measure the abundance and temperature of
 % these molecules.  However, the results are ambiguous: for each vibrational
@@ -233,91 +235,6 @@ distribution between vibrational excitation states cannot.}
 \input{41KCl_line_parameters.tex}
 \input{41K37Cl_line_parameters.tex}
 
-
-%%%%%%%%%%%%%%%%%%%%
-%Brett's Suggested Table Format
-%%%%%%%%%%%%%%%%%%%%
-\clearpage
-
-\begin{center}
-    \textbf{Brett's Suggested Table Format}
-\end{center}
-
-I can't get the damned thing to render on this page, so it's on the next one...
-
-\begin{table*}[h!]
-\centering
-\caption{KCl Lines}
-\begin{tabular}{ccccccc}
-\label{tab:KCl_salt_lines}
-$J^{\prime}$ & $J^{\prime\prime}$ & Frequency & Velocity & Width & Amplitude& E$_U$ \\
- && $\mathrm{(GHz)}$ & $\mathrm{(km\,s^{-1})}$  & $\mathrm{(km\,s^{-1})}$ & $\mathrm{(K)}$  & $\mathrm{(K)}$ \\
-\hline
-&\vspace{-0.75em}\\
-\multicolumn{7}{c}{$v = 0$} \\
-\vspace{-0.75em}\\
-
-13 & 12 & 99.92949 & 4.1(3) 	& 4.8(3)	& 15.3(9)	& 33.6 \\
-28 & 27 & 215.00862 & 5.0(6) 	& 4.3(6)	& 10(1) 	& 149.7 \\
-30 & 29 & 230.32109 & 4.0(2) 	& 4.8(2)	& 14.4(4) 	& 171.4 \\
-45 & 44 & 344.82231 & 1(1) 		& 5(1)		& 10(2) 	& 381.2 \\
-
-&\vspace{-0.75em}\\
-\multicolumn{7}{c}{$v = 1$} \\
-\vspace{-0.75em}\\
-
-13 & 12 & 99.31593 & 6(1) 		& 4(1)		& 8(2) 		& 432.6 \\
-44 & 43 & 335.13388 & 3.4(3) 	& 4.1(3)	& 14.1(8)	& 761.7 \\
-
-&\vspace{-0.75em}\\
-\multicolumn{7}{c}{$v = 2$} \\
-\vspace{-0.75em}\\
-
-13 & 12 & 98.70507 & 4.3(9)		& 7(1)		& 14(1)		 & 828.3 \\
-44 & 43 & 333.06642 & 5.0(5)	& 4.8(5)	& 11(1) 	& 1155.3 \\
-
-&\vspace{-0.75em}\\
-\multicolumn{7}{c}{$v = 3$} \\
-\vspace{-0.75em}\\
-29 & 28 & 218.57797 & 6.7(4)	& 3.3(4)	& 5.0(6) & 1345.1 \\
-13 & 12 & 98.09694 & 8(1)		& 5(1)		& 9(2)	&	1220.6 \\
-31 & 30 & 233.60388 & 7.1(6)	& 4.2(6) 	& 6.0(8)& 1367.1 \\
-
-&\vspace{-0.75em}\\
-\multicolumn{7}{c}{$v = 4$} \\
-\vspace{-0.75em}\\
-
-13 & 12 & 97.49150 & 9(2)		& 8(3) 		& 6(1) & 1609.5 \\
-29 & 28 & 217.22742 & 1.7(6)	& 3.2(6) 	& 3.5(6) & 1733.2 \\
-31 & 30 & 232.16021 & 6.7(6)	& 3.9(6)	& 6.6(8) & 1755.1 \\
-
-&\vspace{-0.75em}\\
-\multicolumn{7}{c}{$v = 5$} \\
-\vspace{-0.75em}\\
-
-29 & 28 & 215.88296 & 7(2) 		& 4(2)		& 3(1) & 2118.0 \\
-31 & 30 & 230.72302 & 6.5(4)	& 4.3(4) 	& 5.2(5) & 2139.8 \\
-45 & 44 & 334.29723 & 2.7(3)	& 16.6(6)	& 42.3(5) & 2332.2 \\
-
-&\vspace{-0.75em}\\
-\multicolumn{7}{c}{$v = 6$} \\
-\vspace{-0.75em}\\
-
-29 & 28 & 214.54455 & 6(2)		& 4(2) 		& 3(1) & 2499.6 \\
-31 & 30 & 229.29232 & 5.8(5)	& 3.2(5) 	& 4.1(5) & 2521.2 \\
-47 & 46 & 346.87334 & 1(1)		& 6(1) 		& 4.3(7) & 2745.3 \\
-
-&\vspace{-0.75em}\\
-\multicolumn{7}{c}{$v = 7$} \\
-\vspace{-0.75em}\\
-
-47 & 46 & 344.71429 & 5(3)		& 9(4) 		& 5(1) & 3122.1 \\
-
-\hline
-\end{tabular}
-
-\par 
-\end{table*}
 
 \input{solobib}
 
