--- a/41K37Cl_line_parameters.tex
+++ b/41K37Cl_line_parameters.tex
@@ -1,12 +1,11 @@
 \begin{table*}[htp]
 \centering
 \caption{$^{41}$K$^{37}$Cl Lines}
-\begin{tabular}{ccccccccc}
+\begin{tabular}{ccccccc}
 \label{tab:41K37Cl_salt_lines}
-QNs & Frequency & Velocity & Velocity error & Width & Width error & Amplitude & Amplitude error & E$_U$ \\
- & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
+ J$_u$ & J$_l$ & Frequency & Velocity & Width & Amplitude & E$_U$ \\
+  &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
 \hline
-v=7-7 J=48-47 & 334.32520 & -9.5 & 0.0 & 7.1 & 0.3 & 27.8 & 0.8 & 3049.3 \\
 \hline
 \end{tabular}
 
