--- a/41KCl_line_parameters.tex
+++ b/41KCl_line_parameters.tex
@@ -1,16 +1,19 @@
 \begin{table*}[htp]
 \centering
 \caption{$^{41}$KCl Lines}
-\begin{tabular}{ccccccccc}
+\begin{tabular}{ccccccc}
 \label{tab:41KCl_salt_lines}
-QNs & Frequency & Velocity & Velocity error & Width & Width error & Amplitude & Amplitude error & E$_U$ \\
- & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
+ J$_u$ & J$_l$ & Frequency & Velocity & Width & Amplitude & E$_U$ \\
+  &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
 \hline
-v=2-2 J=12-11 & 89.03049 & 8.2 & 0.0 & 0.2 & 0.0 & 0.1 & 1.6 & 813.8 \\
-v=0-0 J=13-12 & 97.62803 & 4.9 & 2.5 & 10.0 & 3.2 & 6.5 & 1.3 & 32.8 \\
-v=0-0 J=29-28 & 217.54351 & 5.0 & 0.7 & 6.5 & 0.7 & 4.5 & 0.4 & 156.7 \\
-v=2-2 J=31-30 & 229.68076 & 4.2 & 0.6 & 13.1 & 1.0 & 9.6 & 0.3 & 962.5 \\
-v=8-8 J=47-46 & 334.89850 & - & - & - & - & - & - & 3452.1 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 0$} \\
+\vspace{-0.75em}\\
+ 13 & 12 & 97.62803 & 4.9 (2.5) & 10.0 (3.2) & 6.5 (1.3) & 32.8 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 2$} \\
+\vspace{-0.75em}\\
+ 7 & 6 & 87.91199 & 5.3 (0.6) & 6.0 (0.6) & 13.3 (1.1) & 1039.3 \\
 \hline
 \end{tabular}
 
