--- a/K37Cl_line_parameters.tex
+++ b/K37Cl_line_parameters.tex
@@ -1,20 +1,15 @@
 \begin{table*}[htp]
 \centering
 \caption{K$^{37}$Cl Lines}
-\begin{tabular}{ccccccccc}
+\begin{tabular}{ccccccc}
 \label{tab:K37Cl_salt_lines}
-QNs & Frequency & Velocity & Velocity error & Width & Width error & Amplitude & Amplitude error & E$_U$ \\
- & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
+ J$_u$ & J$_l$ & Frequency & Velocity & Width & Amplitude & E$_U$ \\
+  &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
 \hline
-v=3-3 J=12-11 & 88.00457 & 6.6 & 1.4 & 6.3 & 1.4 & 5.7 & 1.1 & 1198.3 \\
-v=2-2 J=12-11 & 88.54225 & 8.0 & 1.5 & 4.6 & 1.5 & 4.3 & 1.2 & 811.5 \\
-v=1-1 J=12-11 & 89.08229 & 5.2 & 1.2 & 4.7 & 1.2 & 5.5 & 1.2 & 421.4 \\
-v=6-6 J=30-29 & 215.73578 & 7.3 & 2.8 & 3.0 & 2.8 & 1.9 & 1.5 & 2473.0 \\
-v=1-1 J=31-30 & 229.81801 & 6.5 & 0.3 & 4.8 & 0.3 & 7.2 & 0.4 & 570.2 \\
-v=6-6 J=32-31 & 230.06943 & 5.6 & 1.3 & 5.1 & 1.3 & 1.9 & 0.4 & 2494.7 \\
-v=4-4 J=32-31 & 232.90536 & 7.8 & 1.1 & 5.1 & 1.1 & 4.0 & 0.7 & 1739.2 \\
-v=0-0 J=45-44 & 335.05221 & 6.2 & 0.4 & 6.4 & 0.4 & 12.1 & 0.7 & 370.4 \\
-v=1-1 J=47-46 & 347.71265 & 4.6 & 0.5 & 3.4 & 0.5 & 7.4 & 1.0 & 794.8 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 1$} \\
+\vspace{-0.75em}\\
+ 17 & 16 & 214.93880 & 4.6 (0.4) & 4.7 (0.4) & 18.6 (1.2) & 606.5 \\
 \hline
 \end{tabular}
 
