--- a/KCl_line_parameters.tex
+++ b/KCl_line_parameters.tex
@@ -1,32 +1,45 @@
 \begin{table*}[htp]
 \centering
 \caption{KCl Lines}
-\begin{tabular}{ccccccccc}
+\begin{tabular}{ccccccc}
 \label{tab:KCl_salt_lines}
-QNs & Frequency & Velocity & Velocity error & Width & Width error & Amplitude & Amplitude error & E$_U$ \\
- & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
+ J$_u$ & J$_l$ & Frequency & Velocity & Width & Amplitude & E$_U$ \\
+  &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
 \hline
-v=4-4 J=13-12 & 97.49150 & 8.5 & 2.4 & 8.3 & 2.8 & 5.8 & 1.4 & 1609.5 \\
-v=3-3 J=13-12 & 98.09694 & 7.9 & 1.1 & 5.0 & 1.1 & 9.2 & 1.7 & 1220.6 \\
-v=2-2 J=13-12 & 98.70507 & 4.3 & 0.9 & 7.2 & 1.0 & 13.6 & 1.4 & 828.3 \\
-v=1-1 J=13-12 & 99.31593 & 6.0 & 1.0 & 3.6 & 1.0 & 8.3 & 2.0 & 432.6 \\
-v=0-0 J=13-12 & 99.92949 & 4.1 & 0.3 & 4.8 & 0.3 & 15.3 & 0.9 & 33.6 \\
-v=6-6 J=29-28 & 214.54455 & 5.7 & 1.9 & 4.4 & 1.9 & 3.4 & 1.3 & 2499.6 \\
-v=0-0 J=28-27 & 215.00862 & 5.0 & 0.6 & 4.3 & 0.6 & 10.4 & 1.3 & 149.7 \\
-v=5-5 J=29-28 & 215.88296 & 7.3 & 2.1 & 4.3 & 2.1 & 3.0 & 1.3 & 2118.0 \\
-v=4-4 J=29-28 & 217.22742 & 1.7 & 0.6 & 3.2 & 0.6 & 3.5 & 0.6 & 1733.2 \\
-v=3-3 J=29-28 & 218.57797 & 6.7 & 0.4 & 3.3 & 0.4 & 5.0 & 0.6 & 1345.1 \\
-v=6-6 J=31-30 & 229.29232 & 5.8 & 0.5 & 3.2 & 0.5 & 4.1 & 0.5 & 2521.2 \\
-v=0-0 J=30-29 & 230.32109 & 4.0 & 0.2 & 4.8 & 0.2 & 14.4 & 0.4 & 171.4 \\
-v=5-5 J=31-30 & 230.72302 & 6.5 & 0.4 & 4.3 & 0.4 & 5.2 & 0.5 & 2139.8 \\
-v=4-4 J=31-30 & 232.16021 & 6.7 & 0.6 & 3.9 & 0.6 & 6.6 & 0.8 & 1755.1 \\
-v=3-3 J=31-30 & 233.60388 & 7.1 & 0.6 & 4.2 & 0.6 & 6.0 & 0.8 & 1367.1 \\
-v=2-2 J=44-43 & 333.06642 & 5.0 & 0.5 & 4.8 & 0.5 & 11.3 & 1.0 & 1155.3 \\
-v=5-5 J=45-44 & 334.29723 & 2.7 & 0.3 & 16.6 & 0.6 & 42.3 & 0.5 & 2332.2 \\
-v=1-1 J=44-43 & 335.13388 & 3.4 & 0.3 & 4.1 & 0.3 & 14.1 & 0.8 & 761.7 \\
-v=7-7 J=47-46 & 344.71429 & 5.2 & 3.0 & 9.2 & 3.7 & 5.1 & 1.4 & 3122.1 \\
-v=0-0 J=45-44 & 344.82231 & 1.0 & 1.1 & 5.0 & 1.1 & 9.7 & 1.8 & 381.2 \\
-v=6-6 J=47-46 & 346.87334 & 1.4 & 1.2 & 6.1 & 1.3 & 4.3 & 0.7 & 2745.3 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 0$} \\
+\vspace{-0.75em}\\
+ 45 & 44 & 344.82231 & 1.0 (1.1) & 5.0 (1.1) & 9.7 (1.8) & 381.2 \\
+ 30 & 29 & 230.32109 & 4.0 (0.2) & 4.8 (0.2) & 14.4 (0.4) & 171.4 \\
+ 13 & 12 & 99.92949 & 4.1 (0.3) & 4.8 (0.3) & 15.3 (0.9) & 33.6 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 1$} \\
+\vspace{-0.75em}\\
+ 7 & 6 & 88.56426 & 3.3 (0.4) & 4.8 (0.4) & 15.8 (1.2) & 530.7 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 2$} \\
+\vspace{-0.75em}\\
+ 12 & 11 & 88.54225 & 8.0 (1.5) & 4.6 (1.5) & 4.3 (1.2) & 811.5 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 3$} \\
+\vspace{-0.75em}\\
+ 31 & 30 & 233.60388 & 7.1 (0.6) & 4.2 (0.6) & 6.0 (0.8) & 1367.1 \\
+ 8 & 7 & 99.72579 & 6.6 (0.4) & 5.7 (0.4) & 14.1 (0.8) & 1547.8 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 4$} \\
+\vspace{-0.75em}\\
+ 13 & 12 & 97.49150 & 8.5 (2.4) & 8.3 (2.8) & 5.8 (1.4) & 1609.5 \\
+ 31 & 30 & 232.16021 & 6.7 (0.6) & 3.9 (0.6) & 6.6 (0.8) & 1755.1 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 5$} \\
+\vspace{-0.75em}\\
+ 31 & 30 & 230.72302 & 6.5 (0.4) & 4.3 (0.4) & 5.2 (0.5) & 2139.8 \\
+ 19 & 18 & 233.16370 & 12.1 (0.5) & 3.7 (0.5) & 7.6 (0.9) & 2631.4 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 6$} \\
+\vspace{-0.75em}\\
+ 8 & 7 & 97.53165 & - (-) & - (-) & - (-) & 3030.0 \\
+ 47 & 46 & 346.87334 & 1.4 (1.2) & 6.1 (1.3) & 4.3 (0.7) & 2745.3 \\
 \hline
 \end{tabular}
 
