--- a/Na37Cl_line_parameters.tex
+++ b/Na37Cl_line_parameters.tex
@@ -1,27 +1,38 @@
 \begin{table*}[htp]
 \centering
 \caption{Na$^{37}$Cl Lines}
-\begin{tabular}{ccccccccc}
+\begin{tabular}{ccccccc}
 \label{tab:Na37Cl_salt_lines}
-QNs & Frequency & Velocity & Velocity error & Width & Width error & Amplitude & Amplitude error & E$_U$ \\
- & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
+ J$_u$ & J$_l$ & Frequency & Velocity & Width & Amplitude & E$_U$ \\
+  &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
 \hline
-v=5-5 J=7-6 & 85.97978 & 11.2 & 1.1 & 4.2 & 1.3 & 8.5 & 1.9 & 2536.0 \\
-v=4-4 J=7-6 & 86.61972 & 2.0 & 1.1 & 8.9 & 1.3 & 12.7 & 1.3 & 2041.9 \\
-v=3-3 J=7-6 & 87.26380 & 5.8 & 1.0 & 4.5 & 1.0 & 9.0 & 1.7 & 1543.0 \\
-v=2-2 J=7-6 & 87.91199 & 5.3 & 0.6 & 6.0 & 0.6 & 13.3 & 1.1 & 1039.3 \\
-v=1-1 J=7-6 & 88.56426 & 3.3 & 0.4 & 4.8 & 0.4 & 15.8 & 1.2 & 530.7 \\
-v=0-0 J=7-6 & 89.22066 & 2.5 & 0.4 & 5.0 & 0.4 & 18.2 & 1.2 & 17.1 \\
-v=6-6 J=8-7 & 97.53165 & - & - & - & - & - & - & 3030.0 \\
-v=5-5 J=8-7 & 98.25832 & 11.4 & 1.5 & 5.8 & 1.7 & 8.2 & 1.6 & 2540.7 \\
-v=4-4 J=8-7 & 98.98970 & 9.3 & 1.1 & 4.1 & 1.1 & 8.3 & 1.9 & 2046.6 \\
-v=3-3 J=8-7 & 99.72579 & 6.6 & 0.4 & 5.7 & 0.4 & 14.1 & 0.8 & 1547.8 \\
-v=2-2 J=8-7 & 100.46655 & 6.3 & 0.4 & 7.5 & 0.5 & 15.8 & 0.7 & 1044.1 \\
-v=1-1 J=8-7 & 101.21203 & 4.2 & 0.3 & 5.7 & 0.3 & 19.7 & 0.8 & 535.5 \\
-v=1-1 J=17-16 & 214.93880 & 4.6 & 0.4 & 4.7 & 0.4 & 18.6 & 1.2 & 606.5 \\
-v=0-0 J=18-17 & 229.24720 & 3.3 & 0.1 & 4.7 & 0.1 & 21.4 & 0.4 & 104.6 \\
-v=5-5 J=19-18 & 233.16370 & 12.1 & 0.5 & 3.7 & 0.5 & 7.6 & 0.9 & 2631.4 \\
-v=4-4 J=27-26 & 333.45280 & 11.0 & 0.5 & 4.4 & 0.5 & 11.3 & 1.0 & 2249.5 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 0$} \\
+\vspace{-0.75em}\\
+ 7 & 6 & 89.22066 & 2.5 (0.4) & 5.0 (0.4) & 18.2 (1.2) & 17.1 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 1$} \\
+\vspace{-0.75em}\\
+ 31 & 30 & 229.81801 & 6.5 (0.3) & 4.8 (0.3) & 7.2 (0.4) & 570.2 \\
+ 26 & 25 & 335.50625 & 5.8 (0.1) & 4.7 (0.1) & 29.1 (0.8) & 736.8 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 2$} \\
+\vspace{-0.75em}\\
+ 26 & 25 & 333.00524 & 9.0 (0.3) & 6.2 (0.3) & 21.9 (0.9) & 1249.3 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 3$} \\
+\vspace{-0.75em}\\
+ 12 & 11 & 88.00457 & 6.6 (1.4) & 6.3 (1.4) & 5.7 (1.1) & 1198.3 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 4$} \\
+\vspace{-0.75em}\\
+ 27 & 26 & 333.45280 & 11.0 (0.5) & 4.4 (0.5) & 11.3 (1.0) & 2249.5 \\
+ 8 & 7 & 98.98970 & 9.3 (1.1) & 4.1 (1.1) & 8.3 (1.9) & 2046.6 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 5$} \\
+\vspace{-0.75em}\\
+ 7 & 6 & 87.82328 & 10.5 (0.6) & 5.2 (0.7) & 12.1 (1.2) & 2563.0 \\
+ 29 & 28 & 215.88296 & 7.3 (2.1) & 4.3 (2.1) & 3.0 (1.3) & 2118.0 \\
 \hline
 \end{tabular}
 
