--- a/NaCl_line_parameters.tex
+++ b/NaCl_line_parameters.tex
@@ -1,27 +1,31 @@
 \begin{table*}[htp]
 \centering
 \caption{NaCl Lines}
-\begin{tabular}{ccccccccc}
+\begin{tabular}{ccccccc}
 \label{tab:NaCl_salt_lines}
-QNs & Frequency & Velocity & Velocity error & Width & Width error & Amplitude & Amplitude error & E$_U$ \\
- & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
+ J$_u$ & J$_l$ & Frequency & Velocity & Width & Amplitude & E$_U$ \\
+  &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
 \hline
-v=6-6 J=7-6 & 87.16667 & 12.1 & 1.3 & 4.1 & 1.4 & 7.2 & 1.9 & 3057.4 \\
-v=5-5 J=7-6 & 87.82328 & 10.5 & 0.6 & 5.2 & 0.7 & 12.1 & 1.2 & 2563.0 \\
-v=4-4 J=7-6 & 88.48412 & 8.1 & 0.7 & 6.1 & 0.7 & 11.6 & 1.1 & 2063.8 \\
-v=3-3 J=7-6 & 89.14931 & 6.5 & 0.5 & 5.1 & 0.5 & 14.2 & 1.2 & 1559.6 \\
-v=8-8 J=8-7 & 98.12863 & - & - & - & - & - & - & 4036.6 \\
-v=7-7 J=8-7 & 98.86918 & 5.5 & 0.0 & 2.0 & 0.0 & 0.0 & 0.0 & 3551.7 \\
-v=6-6 J=8-7 & 99.61469 & 12.6 & 0.7 & 4.6 & 0.7 & 8.0 & 0.9 & 3062.2 \\
-v=5-5 J=8-7 & 100.36501 & 10.2 & 0.5 & 4.9 & 0.6 & 10.0 & 0.9 & 2567.8 \\
-v=4-4 J=8-7 & 101.12032 & 7.5 & 0.3 & 5.4 & 0.3 & 15.6 & 0.8 & 2068.6 \\
-v=2-2 J=17-16 & 217.97933 & 6.4 & 0.1 & 5.5 & 0.1 & 19.3 & 0.4 & 1127.5 \\
-v=2-2 J=18-17 & 230.77811 & 6.9 & 0.1 & 6.0 & 0.1 & 19.5 & 0.4 & 1138.6 \\
-v=1-1 J=18-17 & 232.51014 & 5.1 & 0.2 & 6.6 & 0.2 & 23.9 & 0.7 & 625.2 \\
-v=2-2 J=26-25 & 333.00524 & 9.0 & 0.3 & 6.2 & 0.3 & 21.9 & 0.9 & 1249.3 \\
-v=1-1 J=26-25 & 335.50625 & 5.8 & 0.1 & 4.7 & 0.1 & 29.1 & 0.8 & 736.8 \\
-v=6-6 J=27-26 & 335.53719 & 5.5 & 0.0 & 2.0 & 0.0 & 0.0 & 0.0 & 3266.3 \\
-v=2-2 J=27-26 & 345.75983 & 2.2 & 0.9 & 4.7 & 0.9 & 11.6 & 1.9 & 1265.9 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 0$} \\
+\vspace{-0.75em}\\
+ 18 & 17 & 229.24720 & 3.3 (0.1) & 4.7 (0.1) & 21.4 (0.4) & 104.6 \\
+ 7 & 6 & 89.22066 & 2.5 (0.4) & 5.0 (0.4) & 18.2 (1.2) & 17.1 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 2$} \\
+\vspace{-0.75em}\\
+ 31 & 30 & 229.68076 & 4.2 (0.6) & 13.1 (1.0) & 9.6 (0.3) & 962.5 \\
+ 13 & 12 & 98.70507 & 4.3 (0.9) & 7.2 (1.0) & 13.6 (1.4) & 828.3 \\
+ 18 & 17 & 230.77811 & 6.9 (0.1) & 6.0 (0.1) & 19.5 (0.4) & 1138.6 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 5$} \\
+\vspace{-0.75em}\\
+ 45 & 44 & 334.29723 & 2.7 (0.3) & 16.6 (0.6) & 42.3 (0.5) & 2332.2 \\
+ 31 & 30 & 230.72302 & 6.5 (0.4) & 4.3 (0.4) & 5.2 (0.5) & 2139.8 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 6$} \\
+\vspace{-0.75em}\\
+ 30 & 29 & 215.73578 & 7.3 (2.8) & 3.0 (2.8) & 1.9 (1.5) & 2473.0 \\
 \hline
 \end{tabular}
 
