add back in missing data

--- a/41K37Cl_line_parameters.tex
+++ b/41K37Cl_line_parameters.tex
@@ -7,6 +7,10 @@
   &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
 \hline
 \hline
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 7$} \\
+\vspace{-0.75em}\\
+7 & 48 & 47 & 334.32520 & -9.5 (0.0) & 7.1 (0.3) & 27.8 (0.8) & 3049.3 \\
 \end{tabular}
 
 \par 
