--- a/K37Cl_line_parameters.tex
+++ b/K37Cl_line_parameters.tex
@@ -7,10 +7,18 @@
   &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
 \hline
 &\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 0$} \\
+\vspace{-0.75em}\\
+0 & 45 & 44 & 335.05221 & 6.2 (0.4) & 6.4 (0.4) & 12.1 (0.7) & 370.4 \\
+&\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 1$} \\
 \vspace{-0.75em}\\
  17 & 16 & 214.93880 & 4.6 (0.4) & 4.7 (0.4) & 18.6 (1.2) & 606.5 \\
 \hline
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 6$} \\
+\vspace{-0.75em}\\
+ 30 & 29 & 215.73578 & 7.3 (2.8) & 3.0 (2.8) & 1.9 (1.5) & 2473.0 \\
 \end{tabular}
 
 \par 
