--- a/NaCl_line_parameters.tex
+++ b/NaCl_line_parameters.tex
@@ -7,26 +7,29 @@
   &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
 \hline
 &\vspace{-0.75em}\\
-\multicolumn{7}{c}{$v = 0$} \\
+\multicolumn{7}{c}{$v = 1$} \\
 \vspace{-0.75em}\\
-0 & 45 & 44 & 335.05221 & 6.2 (0.4) & 6.4 (0.4) & 12.1 (0.7) & 370.4 \\
- 18 & 17 & 229.24720 & 3.3 (0.1) & 4.7 (0.1) & 21.4 (0.4) & 104.6 \\
- 7 & 6 & 89.22066 & 2.5 (0.4) & 5.0 (0.4) & 18.2 (1.2) & 17.1 \\
+ 26 & 25 & 335.50625 & 5.8 (0.1) & 4.7 (0.1) & 29.1 (0.8) & 736.8 \\
+ 18 & 17 & 232.51014 & 5.1 (0.2) & 6.6 (0.2) & 23.9 (0.7) & 625.2 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 2$} \\
 \vspace{-0.75em}\\
- 31 & 30 & 229.68076 & 4.2 (0.6) & 13.1 (1.0) & 9.6 (0.3) & 962.5 \\
- 13 & 12 & 98.70507 & 4.3 (0.9) & 7.2 (1.0) & 13.6 (1.4) & 828.3 \\
+ 26 & 25 & 333.00524 & 9.0 (0.3) & 6.2 (0.3) & 21.9 (0.9) & 1249.3 \\
+ 27 & 26 & 345.75983 & 2.2 (0.9) & 4.7 (0.9) & 11.6 (1.9) & 1265.9 \\
  18 & 17 & 230.77811 & 6.9 (0.1) & 6.0 (0.1) & 19.5 (0.4) & 1138.6 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 4$} \\
+\vspace{-0.75em}\\
+ 7 & 6 & 88.48412 & 8.1 (0.7) & 6.1 (0.7) & 11.6 (1.1) & 2063.8 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 5$} \\
 \vspace{-0.75em}\\
- 45 & 44 & 334.29723 & 2.7 (0.3) & 16.6 (0.6) & 42.3 (0.5) & 2332.2 \\
- 31 & 30 & 230.72302 & 6.5 (0.4) & 4.3 (0.4) & 5.2 (0.5) & 2139.8 \\
+ 8 & 7 & 100.36501 & 10.2 (0.5) & 4.9 (0.6) & 10.0 (0.9) & 2567.8 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 6$} \\
 \vspace{-0.75em}\\
- 30 & 29 & 215.73578 & 7.3 (2.8) & 3.0 (2.8) & 1.9 (1.5) & 2473.0 \\
+ 7 & 6 & 87.16667 & 12.1 (1.3) & 4.1 (1.4) & 7.2 (1.9) & 3057.4 \\
+ 27 & 26 & 335.53719 & 5.5 (0.0) & 2.0 (0.0) & 0.0 (0.0) & 3266.3 \\
 \hline
 \end{tabular}
 
