more text revision.  I'm feeling less and less confident about the interpretation

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -183,21 +183,41 @@ vibrationally excited states should be effectively zero.  These observations
 combined suggest that there is a radiative mechanism exciting the vibrational
 states.
 
+
+% Since the highest clearly detected energy state detected has $E_U\sim3000$ K
+% (see Table \ref{tab:all_detections_B3}; the v=6 lines of NaCl have three
+% J-transitions detected), the radiation field likely turns over at around this
+% temperature, implying the presence of a slightly cooler radiation field than
+% implied in \citet{Testi2010a}, but still much warmer than the equilibrium temperature
+% of the disk at this radius.  
+% However, it is also possible that the higher-excitation lines are simply too faint
+% to be detected at our $\sim0.4$ mJy/\kms RMS limit.
+
+{\color{red} This is a note to be incorporated somewhere:}
+The $\delta v=1$ rovibrational transitions of KCl are all around 36.1-38 \um,
+while the NaCl transitions are in the range 27.6-30 \um.
+More interesting for constraining the exciting source, though, are the v=0 to
+v=1 through v=8 lines.
+For example, the KCl v=6-0 J=1-0 line is at 6.13 \um and the NaCl v=7-0 J=1-0
+line is at 4.07 \um.  Assuming the population of these lines are created
+from excitation from the ground state, they require a blackbody radiation field
+of $T\approx500-750$ K ($T\approx b / \lambda$, where $b\approx2900$ \um K is
+Wien's displacement constant).
+
+
 A plausible scenario is that the hot radiation field from the central star,
 with $T_*\sim4000$ K \citep{Testi2010a}, excites molecules to high vibrational
 excitation states, from which they cascade through rovibrational transitions
 down to the v=0 state, providing a relatively uniform level population
 from $E_U=0$ to $E_U\approx T_*$ instead of a thermal level population.
+However, a 4000 K blackbody should produce most of its flux around 1 \um,
+which should result in much higher excitation than we observe.  Either
+the higher-excitation lines are too faint {\color{red} do we expect this?}
+or the salt emission is coming from a region of the disk that is shielded
+behind an extinction layer.   Since the salts would likely be incorporated into
+grains {\color{red}can we back this?} if a large population of grains
+were present, it is not clear that such a layer can exist.
 
-
-Since the highest clearly detected energy state detected has $E_U\sim3000$ K
-(see Table \ref{tab:all_detections_B3}; the v=6 lines of NaCl have three
-J-transitions detected), the radiation field likely turns over at around this
-temperature, implying the presence of a slightly cooler radiation field than
-implied in \citet{Testi2010a}, but still much warmer than the equilibrium temperature
-of the disk at this radius.  
-However, it is also possible that the higher-excitation lines are simply too faint
-to be detected at our $\sim0.4$ mJy/\kms RMS limit.
 
 % We plot and fit rotational diagrams to measure the abundance and temperature of
 % these molecules.  However, the results are ambiguous: for each vibrational
