add some future prospects text

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -219,6 +219,16 @@ grains {\color{red}can we back this?} if a large population of grains
 were present, it is not clear that such a layer can exist.
 
 
+\subsection{Future prospects}
+The detection of these refractory species in the gas phase in the atmosphere
+of \sourcei's disk hints that other refractory molecules may be present, 
+enabling their first detection in the ISM (e.g., such rare species as FeO and FeS),
+and may enable direct measurments of the metallicity in star-forming gas.
+It remains unclear whether \sourcei is a unique source or is representative
+of the class of high-mass protostars with disks; if the latter, these lines
+and potentially many others can be used to probe the radiation environment of 
+extremely embedded high-mass protostars.
+
 % We plot and fit rotational diagrams to measure the abundance and temperature of
 % these molecules.  However, the results are ambiguous: for each vibrational
 % state with more than one detected transition, we are able to fit an excitation
