add Brett as coauthor

--- a/authors.tex
+++ b/authors.tex
@@ -1,5 +1,6 @@
 \newcommand{\nraojansky}{\affiliation{\it{Jansky fellow of the National Radio Astronomy Observatory, 1003 Lopezville Rd, Socorro, NM 87801 USA }}}
 \newcommand{\nrao}{\affiliation{\it{National Radio Astronomy Observatory, 1003 Lopezville Rd, Socorro, NM 87801 USA }}}
+\newcommand{\nraocv}{\affiliation{\it{National Radio Astronomy Observatory, CV USA }}}
 
 
 \newcommand{\radboud}{\affiliation{\it{Department of Astrophysics/IMAPP, Radboud University Nijmegen, PO Box 9010, 6500 GL Nijmegen, the Netherlands}}}
@@ -28,6 +29,8 @@
 \correspondingauthor{Adam Ginsburg}
 \email{aginsbur@nrao.edu; adam.g.ginsburg@gmail.com}
 
+\author{Brett McGuire}
+\nraocv
 
 \author{John Bally}
 \casa
