--- a/KCl_line_parameters.tex
+++ b/KCl_line_parameters.tex
@@ -9,33 +9,38 @@
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 0$} \\
 \vspace{-0.75em}\\
- 28 & 27 & 215.00862 & 5.0 (0.6) & 4.3 (0.6) & 10.4 (1.3) & 149.7 \\
- 45 & 44 & 344.82231 & 1.0 (1.1) & 5.0 (1.1) & 9.7 (1.8) & 381.2 \\
- 30 & 29 & 230.32109 & 4.0 (0.2) & 4.8 (0.2) & 14.4 (0.4) & 171.4 \\
- 13 & 12 & 99.92949 & 4.1 (0.3) & 4.8 (0.3) & 15.3 (0.9) & 33.6 \\
+ 28 & 27 & 215.00828 & 5.5 (0.6) & 4.3 (0.6) & 10.4 (1.3) & 149.7 \\
+ 45 & 44 & 344.82061 & 2.5 (1.1) & 4.9 (1.1) & 9.7 (1.8) & 381.2 \\
+ 30 & 29 & 230.32064 & 4.6 (0.2) & 4.8 (0.2) & 14.4 (0.4) & 171.4 \\
+ 13 & 12 & 99.92952 & 4.0 (0.3) & 4.8 (0.3) & 15.3 (0.9) & 33.6 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 1$} \\
+\vspace{-0.75em}\\
+ 13 & 12 & 99.31663 & 3.9 (1.0) & 3.6 (1.0) & 8.3 (2.0) & 432.6 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 2$} \\
 \vspace{-0.75em}\\
- 13 & 12 & 98.70507 & 4.3 (0.9) & 7.2 (1.0) & 13.6 (1.4) & 828.3 \\
+ 13 & 12 & 98.70595 & 2.0 (0.8) & 6.4 (0.8) & 14.2 (1.5) & 828.3 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 3$} \\
 \vspace{-0.75em}\\
- 31 & 30 & 233.60388 & 7.1 (0.6) & 4.2 (0.6) & 6.0 (0.8) & 1367.1 \\
- 13 & 12 & 98.09694 & 7.9 (1.1) & 5.0 (1.1) & 9.2 (1.7) & 1220.6 \\
+ 31 & 30 & 233.60570 & 4.8 (0.7) & 4.2 (0.7) & 6.0 (0.8) & 1367.1 \\
+ 13 & 12 & 98.09753 & 6.1 (1.1) & 5.0 (1.1) & 9.2 (1.7) & 1220.6 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 4$} \\
 \vspace{-0.75em}\\
- 13 & 12 & 97.49150 & 8.5 (2.4) & 8.3 (2.8) & 5.8 (1.4) & 1609.5 \\
- 31 & 30 & 232.16021 & 6.7 (0.6) & 3.9 (0.6) & 6.6 (0.8) & 1755.1 \\
+ 13 & 12 & 97.49133 & 8.0 (2.1) & 7.0 (2.4) & 6.1 (1.5) & 1609.5 \\
+ 31 & 30 & 232.16185 & 4.6 (0.6) & 3.9 (0.6) & 6.6 (0.8) & 1755.1 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 5$} \\
 \vspace{-0.75em}\\
- 29 & 28 & 215.88296 & 7.3 (2.1) & 4.3 (2.1) & 3.0 (1.3) & 2118.0 \\
- 31 & 30 & 230.72302 & 6.5 (0.4) & 4.3 (0.4) & 5.2 (0.5) & 2139.8 \\
+ 29 & 28 & 215.88373 & 6.3 (2.1) & 4.3 (2.1) & 3.0 (1.3) & 2118.0 \\
+ 31 & 30 & 230.72399 & 5.3 (0.4) & 4.3 (0.4) & 5.2 (0.5) & 2139.8 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 6$} \\
 \vspace{-0.75em}\\
- 47 & 46 & 346.87334 & 1.4 (1.2) & 6.1 (1.3) & 4.3 (0.7) & 2745.3 \\
+ 31 & 30 & 229.29217 & 6.0 (0.5) & 3.2 (0.5) & 4.1 (0.5) & 2521.2 \\
+ 47 & 46 & 346.87489 & 0.7 (1.1) & 5.5 (1.2) & 4.4 (0.8) & 2745.3 \\
 \hline
 \end{tabular}
 
