Updates from ShareLaTeX

--- a/authors.tex
+++ b/authors.tex
@@ -1,6 +1,8 @@
 \newcommand{\nraojansky}{\affiliation{\it{Jansky fellow of the National Radio Astronomy Observatory, 1003 Lopezville Rd, Socorro, NM 87801 USA }}}
 \newcommand{\nrao}{\affiliation{\it{National Radio Astronomy Observatory, 1003 Lopezville Rd, Socorro, NM 87801 USA }}}
-\newcommand{\nraocv}{\affiliation{\it{National Radio Astronomy Observatory, CV USA }}}
+\newcommand{\nraocv}{\affiliation{\it{National Radio Astronomy Observatory, Charlottesville, VA 22903 USA }}}
+\newcommand{\cfa}{\affiliation{\it{Harvard-Smithsonian Center for Astrophysics, Cambridge, MA 02138 USA }}}
+\newcommand{\hubble}{\altaffiliation{B.A.M. is a Hubble Fellow of the National Radio Astronomy\\ Observatory.}}
 
 
 \newcommand{\radboud}{\affiliation{\it{Department of Astrophysics/IMAPP, Radboud University Nijmegen, PO Box 9010, 6500 GL Nijmegen, the Netherlands}}}
@@ -30,7 +32,10 @@
 \email{aginsbur@nrao.edu; adam.g.ginsburg@gmail.com}
 
 \author{Brett McGuire}
+\hubble
 \nraocv
+\cfa
+
 
 \author{John Bally}
 \casa
