--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -265,6 +265,8 @@ distribution between vibrational excitation states cannot.}
 \input{41KCl_line_parameters.tex}
 \input{41K37Cl_line_parameters.tex}
 
+\acknowledgements
+The National Radio Astronomy Observatory is a facility of the National Science Foundation operated under cooperative agreement by Associated Universities, Inc. The Green Bank Observatory is a facility of the National Science Foundation operated under cooperative agreement by Associated Universities, Inc. Support for B.A.M. was provided by NASA through Hubble Fellowship grant \#HST-HF2-51396 awarded by the Space Telescope Science Institute, which is operated by the Association of Universities for Research in Astronomy, Inc., for NASA, under contract NAS5-26555. 
 
 \input{solobib}
 
