removed some lines from table when flagged

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -143,8 +143,8 @@ higher-$v$ states to get corrected rest frequencies.
 \input{lines_in_band6.tex}
 \input{lines_in_band7.tex}
 
-The low observed brightness temperatures suggest that the emission from
-these lines is optically thin.
+%The low observed brightness temperatures suggest that the emission from
+%these lines is optically thin.
 
 
 
